{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 56,
  "lineage": "0cfe1653-25c4-b2a0-ff81-7b64b46d165a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:544807074632:loadbalancer/app/node-js-app-production-alb/546b57aa40289bca",
            "arn_suffix": "app/node-js-app-production-alb/546b57aa40289bca",
            "desync_mitigation_mode": "defensive",
            "dns_name": "node-js-app-production-alb-622382414.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:544807074632:loadbalancer/app/node-js-app-production-alb/546b57aa40289bca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-js-app-production-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fae30742cf9c62eb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d91366e310ef9a1"
              },
              {
                "subnet_id": "subnet-04c1858f7418adfd3"
              }
            ],
            "subnets": [
              "subnet-03d91366e310ef9a1",
              "subnet-04c1858f7418adfd3"
            ],
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "node-js-app-alb"
            },
            "vpc_id": "vpc-07b59787690d27bb2",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:544807074632:internet-gateway/igw-095f16cfb56c3a10d",
            "id": "igw-095f16cfb56c3a10d",
            "owner_id": "544807074632",
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "node-js-app-igw"
            },
            "vpc_id": "vpc-07b59787690d27bb2"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:544807074632:listener/app/node-js-app-production-alb/546b57aa40289bca/d73f4ddacc695dcd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:544807074632:targetgroup/node-js-app-production-tg/e027eed49e13cc23",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:544807074632:listener/app/node-js-app-production-alb/546b57aa40289bca/d73f4ddacc695dcd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:544807074632:loadbalancer/app/node-js-app-production-alb/546b57aa40289bca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:544807074632:targetgroup/node-js-app-production-tg/e027eed49e13cc23",
            "arn_suffix": "targetgroup/node-js-app-production-tg/e027eed49e13cc23",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/v1/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:544807074632:targetgroup/node-js-app-production-tg/e027eed49e13cc23",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "node-js-app-production-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-lb-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "node-js-app-lb-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-07b59787690d27bb2"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-095f16cfb56c3a10d",
            "id": "r-rtb-0e708c9ba48a5e7001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e708c9ba48a5e700",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:544807074632:route-table/rtb-0e708c9ba48a5e700",
            "id": "rtb-0e708c9ba48a5e700",
            "owner_id": "544807074632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095f16cfb56c3a10d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-routing-table-public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "node-js-app-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b59787690d27bb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:544807074632:security-group/sg-0fae30742cf9c62eb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fae30742cf9c62eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220901133452315000000002",
            "name_prefix": "terraform-",
            "owner_id": "544807074632",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "node-js-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b59787690d27bb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:544807074632:security-group/sg-08eafe32ff9d4a803",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08eafe32ff9d4a803",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0fae30742cf9c62eb"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220901133502283400000003",
            "name_prefix": "terraform-",
            "owner_id": "544807074632",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-service-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "node-js-app-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b59787690d27bb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:544807074632:subnet/subnet-06bc592273f5e85ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bc592273f5e85ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544807074632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "node-js-app-private-subnet-2"
            },
            "vpc_id": "vpc-07b59787690d27bb2"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:544807074632:subnet/subnet-03d91366e310ef9a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d91366e310ef9a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "544807074632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "node-js-app-public-subnet-2"
            },
            "vpc_id": "vpc-07b59787690d27bb2"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:544807074632:vpc/vpc-07b59787690d27bb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0aa69a61706e81618",
            "default_route_table_id": "rtb-0095a7fbe1db50f14",
            "default_security_group_id": "sg-057c9cfec4a45791e",
            "dhcp_options_id": "dopt-00de2772a8680bbb6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07b59787690d27bb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0095a7fbe1db50f14",
            "owner_id": "544807074632",
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "node-js-app-vpc"
            }
          }
        }
      ]
    }
  ]
}